--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.4.8",
+    "bcryptjs": "^2.4.3",
     "esm": "^3.2.22",
     "express": "^4.16.4",
     "graphql": "^14.2.1",
+    "joi": "^14.3.1",
     "mongoose": "^5.5.5"
   },
   "devDependencies": {
