--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "chat",
+  "name": "stackoverflow",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "watch": "NODE_ENV=production node -r esm .",
-    "dev": "NODE_ENV=development nodemon -r esm"
+    "dev": "eval $(cat, env) nodemon -r esm"
   },
   "dependencies": {
     "apollo-server-express": "^2.4.8",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^3.4.1",
     "esm": "^3.2.22",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "graphql": "^14.2.1",
     "joi": "^14.3.1",
     "mongoose": "^5.5.5"
