--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "client": "cd client && yarn start",
     "watch": "NODE_ENV=production node -r esm .",
-    "dev": "eval $(cat, env) nodemon -r esm"
+    "server": "eval $(cat, env) nodemon -r esm",
+    "dev": "concurrently --names \"server,client\" \"yarn server\" \"yarn client --silent\""
   },
   "dependencies": {
     "apollo-server-express": "^2.4.8",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^4.1.0",
     "connect-redis": "^3.4.1",
     "esm": "^3.2.22",
     "express": "^4.16.4",
@@ -19,7 +22,6 @@
     "mongoose": "^5.5.5"
   },
   "devDependencies": {
-    "nodemon": "^1.19.0",
-    "standard": "^12.0.1"
+    "nodemon": "^1.19.0"
   }
 }
